--- a/config.json
+++ b/config.json
@@ -1743,8 +1743,8 @@
         }
       },
       "header": {
-        "title": "IT'S NICE TO MEET YOU",
-        "subtitle": "Welcome To Our Studio!",
+        "title": "Create an account and start making your own web sites",
+        "subtitle": "Edit everything on this site and if you like it...",
         "link": "#services",
         "link_text": "Tell me more",
         "image": "https://raw.githubusercontent.com/klar-templates/agency/master/img/header-bg.jpg",
@@ -1760,9 +1760,9 @@
           "padding_bottom": 200,
           "full_screen": false,
           "text_align": "center",
-          "show_overlay": false,
+          "show_overlay": true,
           "overlay_bg_color": "#000000",
-          "overlay_opacity": 20,
+          "overlay_opacity": 40,
           "margin_top": 0,
           "bg_image_position_top": 0
         }
