--- a/config.json
+++ b/config.json
@@ -47,8 +47,7 @@
         "link_text_hover_color": {
           "type": "string",
           "title": "Länk textfärg hover",
-          "format": "color",
-          "default": "#fed136"
+          "format": "color"
         },
         "primary_color": {
           "type": "string",
