--- a/config.json
+++ b/config.json
@@ -2141,7 +2141,7 @@
           },
           {
             "title": "Terms of Use",
-            "link": "#"
+            "link": ""
           }
         ],
         "style": {
