--- a/config.json
+++ b/config.json
@@ -1370,7 +1370,7 @@
         }
       }
     },
-    "page": {
+    "pages": {
       "data": {
         "title": "Agency - Start Bootstrap Theme",
         "description": "This is my one page website and it's beautiful!"
