--- a/config.json
+++ b/config.json
@@ -1371,7 +1371,7 @@
       }
     },
     "page": {
-      "data": {
+      "settings": {
         "title": "Agency - Start Bootstrap Theme",
         "description": "This is my one page website and it's beautiful!"
       }
