--- a/config.json
+++ b/config.json
@@ -1682,7 +1682,7 @@
           }
         }
       },
-      "react": {
+      "team-2": {
         "heading": "Our Amazing Team",
         "sub_heading": "Lorem ipsum dolor sit amet consectetur.",
         "team": [
